Selector rename Picker and fix bug for mask z-index

--- a/styles/components/Picker.scss
+++ b/styles/components/Picker.scss
@@ -1,94 +1,148 @@
-.ui-picker {
+
+.ui-picker-placeholder {
+  color: #a9a9a9;
+}
+  
+.ui-picker-group {
+  z-index: 1500;
+}
+
+.ui-picker-hidden {
+  .ui-picker-mask {
+    display: none;
+    background: rgba(0, 0, 0, 0);
+  }
+
+  .ui-picker-inner {
+    transform: translate(0, 100%);
+  }
+}
+
+.ui-picker-mask {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  transition: background .3s;
+  background: rgba(0, 0, 0, 0.4);
   -webkit-overflow-scrolling: touch;
   user-select: none;
-  overflow: auto;
-  z-index: 1100;
+  z-index: 1501;
+}
 
-  > .ui-picker-wrapper {
+.ui-picker-inner {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  transform: translate(0, 0);
+  transition: transform .3s;
+  z-index: 1502;
+}
+
+.ui-picker-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #f2f2f2;
+  width: 100%;
+  height: r(45);
+  line-height: r(45);
+
+  .ui-picker-cancel,
+  .ui-picker-submit {
+    flex: 1;
+    padding: 0 r(20);
+    cursor: pointer;
+  }
+
+  .ui-picker-cancel {
+    color: #a9a9a9;
+  }
+  
+  .ui-picker-submit {
+    text-align: right;
+    color: #01c1f5;
+  }
+}
+
+.ui-picker-mask-top {
+  -webkit-mask: -webkit-gradient(linear,0% 40%,0% 0%, from(rgba(222,187,71,1)), to(rgba(36,142,36,0)));
+}
+
+.ui-picker-mask-bottom {
+  -webkit-mask: -webkit-gradient(linear,0% 60%,0% 100%, from(rgba(222,187,71,1)), to(rgba(36,142,36,0)));
+}
+
+.ui-picker-body {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  background: #fff;
+  height: r(210);
+  overflow: hidden;
+}
+
+.ui-picker-selected {
+  position: absolute;
+  top: r(90);
+  left: 0;
+  width: 100%;
+  height: r(30);
+  border: 1px solid #e2e2e2;
+  border-left: none;
+  border-right: none;
+}
+
+.ui-picker {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  max-height: 100%;
+  height: r(200);
+  text-align: center;
+  
+  .ui-picker-mask-top,
+  .ui-picker-mask-bottom {
     position: absolute;
     left: 0;
-    bottom: 0;
     width: 100%;
-    background: #fff;
+    height: r(90);
+  }
 
-    > .ui-picker-header {
-      display: flex;
-      align-items: center;
-      background: #f1f1f1;
+  .ui-picker-mask-top {
+    top: 0;
+    border-bottom: 1px solid #e2e2e2;
+    /*background: -webkit-linear-gradient(top, #fff, transparent);*/
+    /*background: gradient(linear, center top, center bottom, from(#fff), to(transparent));*/
+  }
+
+  .ui-picker-mask-bottom {
+    bottom: 0;
+    border-top: 1px solid #e2e2e2;
+    /*background: -webkit-linear-gradient(top, transparent, #fff);*/
+    /*background: -webkit-gradient(linear, center top, center bottom, from(transparent), to(#fff));*/
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    margin-top: r(90);
+    padding: 0;
+
+    li {
       width: 100%;
-      border-bottom: 1px solid #dfdfdf;
-      height: r(40);
-
-      span {
-        flex: 1;
-
-        &:last-of-type {
-          text-align: right;
-        }
-
-        a {
-          display: inline-block;
-          height: r(40);
-          line-height: r(40);
-          padding: 0 r(10);
-          color: #0276fd;
-        }
-      }
-
-    }
-
-    .ui-picker-body {
-      -webkit-mask: -webkit-gradient(linear,0% 60%,0% 100%, from(rgba(222,187,71,1)), to(rgba(36,142,36,0)));
-    }
-
-    .ui-picker-dialog {
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      position: relative;
-      background: #fff;
-      -webkit-mask: -webkit-gradient(linear,0% 40%,0% 0%, from(rgba(222,187,71,1)), to(rgba(36,142,36,0)));
-      height: r(150);
+      height: r(30);
+      line-height: r(30);
+      font-size: r(20);
+      user-select: none;
       overflow: hidden;
-      z-index: 1101;
-      
-      p {
-        margin: 0;
-        padding: 0;
-        position: absolute;
-        top: r(60);
-        left: 0;
-        width: 100%;
-        height: r(30);
-        border: 1px solid #e2e2e2;
-        border-left: none;
-        border-right: none;
-      }
-
-      .ui-picker-group {
-        flex: 1;
-        z-index: 10;
-        
-        ul {
-          list-style: none;
-          margin: 0;
-          margin-top: r(60);
-          padding: 0;
-
-          li {
-            height: r(30);
-            line-height: r(30);
-            font-size: r(20);
-            user-select: none;
-          }
-        }
-      }
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
+
